@@ -128,6 +128,11 @@ New Features
   rule files in the ICU RuleBasedBreakIterator format.
   (Shawn Heisey, Robert Muir, Steve Rowe)
 
+* LUCENE-4590: Added WriteEnwikiLineDocTask - a benchmark task for writing
+  Wikipedia category pages and non-category pages into separate line files.
+  extractWikipedia.alg was changed to use this task, so now it creates two
+  files. (Doron Cohen)
+  
 API Changes
 
 * LUCENE-4399: Deprecated AppendingCodec. Lucene's term dictionaries
